# marv-lang

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  MAINTAINERS.md  Makefile  README.md  rust-toolchain.toml
.agents/skills/marv/: SKILL.md
.claude/skills/marv/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/marv-cli/: Cargo.toml
crates/marv-cli/src/: main.rs  pipeline.rs
crates/marv-cli/tests/: aot.rs  llvm.rs  wasm.rs
crates/marv-codegen-cl/: Cargo.toml
crates/marv-codegen-cl/src/: lib.rs
crates/marv-codegen-cl/tests/: differential.rs
crates/marv-codegen-llvm/: Cargo.toml
crates/marv-codegen-llvm/src/: lib.rs
crates/marv-codegen-llvm/tests/: differential.rs
crates/marv-codegen-wasm/: Cargo.toml
crates/marv-codegen-wasm/src/: lib.rs
crates/marv-codegen-wasm/tests/: differential.rs
crates/marv-core/: Cargo.toml
crates/marv-core/src/: hash.rs  ir.rs  lib.rs  lower.rs  pred.rs  reach.rs
crates/marv-core/tests/: casts.rs  docs.rs  enums.rs  errors.rs  generics.rs  golden.rs  iter.rs  list_literals.rs  loops.rs  mutation.rs  unary.rs  unsafe_ffi.rs
crates/marv-db/: Cargo.toml
crates/marv-db/src/: analysis.rs  corespec.rs  lib.rs
crates/marv-db/tests/: error_sets.rs  incremental.rs
crates/marv-interp/: Cargo.toml
crates/marv-interp/src/: lib.rs  value.rs
crates/marv-interp/tests/: contracts.rs  generics.rs  run.rs  selfhost.rs  unary.rs
crates/marv-mcp/: Cargo.toml
crates/marv-mcp/src/: main.rs
crates/marv-package/: Cargo.toml
crates/marv-package/src/: lib.rs
crates/marv-server/: Cargo.toml
crates/marv-server/src/: lib.rs  main.rs
crates/marv-server/tests/: protocol.rs
crates/marv-store/: Cargo.toml
crates/marv-store/src/: lib.rs  resolve.rs
crates/marv-store/tests/: store.rs
crates/marv-syntax/: Cargo.toml
crates/marv-syntax/src/: ast.rs  formatter.rs  lexer.rs  lib.rs  parser.rs
crates/marv-syntax/tests/: docs.rs  enums.rs  errors.rs  golden.rs  linear_interface.rs  loops.rs  mutation.rs  quantifiers.rs  roundtrip.rs  unary.rs  unsafe.rs
crates/marv-types/: Cargo.toml
crates/marv-types/src/: bounds.rs  check.rs  diagnostic.rs  layout.rs  lib.rs  world.rs
crates/marv-types/tests/: bounds.rs  capabilities_source.rs  enum_source.rs  error_source.rs  loops.rs  rules.rs  unary.rs  wellformed.rs
crates/marv-types/tests/common/: mod.rs
crates/marv-verify/: Cargo.toml
crates/marv-verify/src/: lib.rs
crates/marv-verify/tests/: verify.rs
docs/: README.md  agents.md  checker.md  cli.md  core-ir.md  formatter.md  language-reference.md  packages.md  platform-support.md  query-server.md  roadmap.md  run-and-codegen.md  stdlib.md  store.md  verification.md
examples/: README.md  adt_verify.mv  app_invoice_summary.mv  app_router.mv  arithmetic.mv  arrays.mv  bytes_utf8.mv  casts.mv  clamp.mv  color.mv  errors.mv  factorial.mv  generics.mv  geometry.mv  hello.mv  http_echo.mv  http_router.mv  iter.mv  json.mv  json_dom.mv  list_literals.mv  list_string_contracts.mv  loops.mv  mutation.mv  optionals.mv  quantifiers.mv  read_file.mv  report.mv  resource_lifecycle.mv  slices.mv  unsafe_audit.mv
selfhost/: README.md  driver.mv  lower_check.mv  model.mv  parser.mv  prim_eval.mv
spec/: 01-design-spec.md  02-grammar-and-core-ir.md  03-compiler-protocol.md  README.md
std/: README.md  bytes.mv  capabilities.mv  collections.mv  http.mv  iter.mv  json.mv  option.mv  ord.mv  result.mv  spawn.mv  str.mv
tests/: README.md
tests/fmt/: casts.in.mv  casts.out.mv  contracts.in.mv  contracts.out.mv  decls.in.mv  decls.out.mv  tabs.in.mv  tabs.out.mv  whitespace.in.mv  whitespace.out.mv
tests/run/: alloc_reclaim.mv  app_tokenizer.mv  arrays.mv  bytes_utf8.mv  cap_narrow.mv  casts.mv  clamp.mv  classify.mv  color.mv  fib.mv  gcd.mv  generics.mv  generics_broad.mv  iter.mv  json.mv  json_dom.mv  list.mv  list_literals.mv  loops.mv  map_set.mv  ops.mv  pruned_sibling.mv  shapes.mv  slices.mv  spawn.mv  string_perform.mv  strings.mv  structs.mv  unary.mv  uses_ungranted_cap.core.json
web/: README.md  arithmetic.wasm  factorial.wasm  fetcher.core.json  fetcher.wasm  index.html
