[package]
name = "marv-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "marv"
path = "src/main.rs"

[dependencies]
marv-syntax = { path = "../marv-syntax" }
marv-core = { path = "../marv-core" }
marv-types = { path = "../marv-types" }
marv-db = { path = "../marv-db" }
marv-interp = { path = "../marv-interp" }
marv-codegen-cl = { path = "../marv-codegen-cl" }
marv-codegen-wasm = { path = "../marv-codegen-wasm" }
serde_json.workspace = true
