[package]
name = "marv-db"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
salsa.workspace = true
serde.workspace = true
serde_json.workspace = true
marv-syntax = { path = "../marv-syntax" }
marv-core = { path = "../marv-core" }
marv-types = { path = "../marv-types" }
