[package]
name = "marv-interp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
marv-core = { path = "../marv-core" }
marv-types = { path = "../marv-types" }

[dev-dependencies]
marv-syntax = { path = "../marv-syntax" }
