[package]
name = "marv-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MCP server exposing the marv agent protocol as tools for LLM/agent harnesses"

[[bin]]
name = "marv-mcp"
path = "src/main.rs"

[dependencies]
serde_json.workspace = true
marv-server = { path = "../marv-server" }
