[package]
name = "marv-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
marv-core = { path = "../marv-core" }
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
marv-syntax = { path = "../marv-syntax" }
