[package]
name = "marv-verify"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
marv-core = { path = "../marv-core" }
marv-types = { path = "../marv-types" }
easy-smt = "0.3.2"

[dev-dependencies]
marv-syntax = { path = "../marv-syntax" }
